[gd_scene load_steps=9 format=3 uid="uid://bxw5qlfuh0s6d"]

[ext_resource type="Script" path="res://worlds/test_world/test_world.gd" id="1_ua0cx"]
[ext_resource type="PackedScene" uid="uid://de4hs2cwtju0n" path="res://actors/enemies/test_dummy/test_dummy.tscn" id="1_ymjlo"]
[ext_resource type="PackedScene" uid="uid://dex5bnpwixrpu" path="res://worlds/destructible_tile_map_layer/destructible_tile_map_layer.tscn" id="2_cabf6"]
[ext_resource type="TileSet" uid="uid://dhwiukoa4a02q" path="res://worlds/destructible_tile_map_layer/destructible_tiles.tres" id="3_vkg6p"]
[ext_resource type="PackedScene" uid="uid://gdhygsqo8lql" path="res://actors/players/rectangle_guy/rectangle_guy.tscn" id="4_3qa2u"]

[sub_resource type="Gradient" id="Gradient_4s3om"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.208333, 0.541667, 0.75)
colors = PackedColorArray(0.150755, 0.38506, 0.999999, 1, 0.223103, 0.223103, 0.223103, 1, 0.753261, 0.432304, 0.190858, 1, 0.937255, 0.870588, 0.498039, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 24

[sub_resource type="FastNoiseLite" id="FastNoiseLite_8rsxq"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_s5gxq"]
color_ramp = SubResource("Gradient_4s3om")
noise = SubResource("FastNoiseLite_8rsxq")

[node name="test_world" type="Node2D"]
script = ExtResource("1_ua0cx")
noise_height_text = SubResource("NoiseTexture2D_s5gxq")

[node name="destructible_tile_map_layer" parent="." instance=ExtResource("2_cabf6")]
tile_set = ExtResource("3_vkg6p")

[node name="test_dummy" parent="." instance=ExtResource("1_ymjlo")]
position = Vector2(117, 0)
base_enemy_debug = false
base_character_debug = false
max_health = 100.0
health = 100.0
speed = 100.0
attack_damage = 5.0

[node name="rectangle_guy" parent="." instance=ExtResource("4_3qa2u")]
position = Vector2(-272, -10)
speed = 500.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
